All Adjustment done Working on js Side

--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -575,6 +575,11 @@ video {
   height: 100vh;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
