--- a/Project-1/style.css
+++ b/Project-1/style.css
@@ -590,6 +590,30 @@ video {
   top: 2.5rem;
 }
 
+.right-full {
+  right: 100%;
+}
+
+.right-7 {
+  right: 1.75rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.-top-8 {
+  top: -2rem;
+}
+
+.-top-24 {
+  top: -6rem;
+}
+
+.-top-20 {
+  top: -5rem;
+}
+
 .z-\[-1\] {
   z-index: -1;
 }
@@ -669,6 +693,42 @@ video {
   width: 2rem;
 }
 
+.w-1\/12 {
+  width: 8.333333%;
+}
+
+.w-6\/12 {
+  width: 50%;
+}
+
+.w-5\/12 {
+  width: 41.666667%;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-3\/12 {
+  width: 25%;
+}
+
+.w-2\/12 {
+  width: 16.666667%;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-2\/5 {
+  width: 40%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .grid-cols-\[1\.5fr_1fr\] {
   grid-template-columns: 1.5fr 1fr;
 }
@@ -713,6 +773,10 @@ video {
   gap: 2rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .self-end {
   align-self: flex-end;
 }
@@ -725,9 +789,33 @@ video {
   border-width: 1px;
 }
 
+.border-l {
+  border-left-width: 1px;
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.border-l-black {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-l-gray-700 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.border-l-gray-600 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
 .bg-gray-700 {
@@ -743,6 +831,11 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FF5202\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 82 2 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -773,6 +866,21 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .text-left {
@@ -852,6 +960,26 @@ video {
   color: rgb(28 28 28 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -863,6 +991,16 @@ video {
 .hover\:text-\[\#FF5202\]:hover {
   --tw-text-opacity: 1;
   color: rgb(255 82 2 / var(--tw-text-opacity));
+}
+
+@media (max-width: 1140px) {
+  .max-\[1140px\]\:top-0 {
+    top: 0px;
+  }
+
+  .max-\[1140px\]\:top-20 {
+    top: 5rem;
+  }
 }
 
 @media (max-width: 1070px) {
@@ -916,6 +1054,10 @@ video {
     position: static;
   }
 
+  .md\:relative {
+    position: relative;
+  }
+
   .md\:top-14 {
     top: 3.5rem;
   }
@@ -934,6 +1076,10 @@ video {
 
   .md\:top-0 {
     top: 0px;
+  }
+
+  .md\:-top-20 {
+    top: -5rem;
   }
 
   .md\:z-10 {
@@ -1087,5 +1233,11 @@ video {
   .min-\[1071px\]\:mx-12 {
     margin-left: 3rem;
     margin-right: 3rem;
+  }
+}
+
+@media (min-width: 1141px) {
+  .min-\[1141px\]\:-top-20 {
+    top: -5rem;
   }
 }
