--- a/Project-2/darkMode.css
+++ b/Project-2/darkMode.css
@@ -7,7 +7,7 @@
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
 }
-.text-gray-400{
+.text-yellow-400{
     --tw-text-opacity: 1; color: rgb(250 204 21 / var(--tw-text-opacity));
 
    color: rgb(250, 204, 21);
